--- a/remake_risicv/CMakeLists.txt
+++ b/remake_risicv/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.10)
-project(remake_risicv)
+cmake_minimum_required(VERSION 3.10.2)
+project(code)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(remake_risicv main.cpp my_tools.h program.h)
+add_executable(code main.cpp my_tools.h program.h)
